--- a/app/views/_navbar.erb
+++ b/app/views/_navbar.erb
@@ -2,7 +2,7 @@
   <% if current_user %>
 
     <section class="navbar-welcome">
-      Welcome <%= current_user.name %>
+      <h1>Welcome <%= current_user.name %></h1>
     </section>
 
     <section>
@@ -27,7 +27,7 @@
   <%else%>
 
     <section class="navbar-welcome">
-      Makers BnB
+      <h1>Makers BnB</h1>
     </section>
       <section class="navbar-nav">
 
