--- a/app/views/bookings/new.erb
+++ b/app/views/bookings/new.erb
@@ -7,7 +7,7 @@
       <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
       <span></span> <b class="caret"></b>
   </div>
-  <button type="submit">Submit Request</button>
+  <button class="btn" type="submit">Submit Request</button>
 </form>
 
 <script>
