--- a/app/views/session/new.erb
+++ b/app/views/session/new.erb
@@ -1,5 +1,5 @@
 <h1>Log in</h1>
-<form class="form" action='/session/new' method ='post'>
+<form id="login" class="form" action='/session/new' method ='post'>
   <fieldset>
     <section>
       <label for="email">Email</label>
