--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -1,6 +1,7 @@
-<h1>Register</h1>
+<h1>Feel at home, anywhere</h1>
 
-<form class="form" action='/user/new' method=post>
+<form id="registration" class="form" action='/user/new' method=post>
+  <h1>Sign up to MakersBnB</h1>
   <fieldset>
     <section>
       <label for="name">Name</label>
