--- a/app/public/main.css
+++ b/app/public/main.css
@@ -202,6 +202,11 @@ label {
   float: right;
 }
 
+#request-info {
+  text-align: center;
+  margin: 20px;
+}
+
 .other-requests .request {
   display: inline-block;
   margin: 20px;
