implemented basic html calendar for new space listing. decided against implementing js calendar due to complexity

--- a/app/public/main.css
+++ b/app/public/main.css
@@ -196,7 +196,7 @@ label {
   display: inline-block;
 }
 
-.glyphicon-chevron-right {
+a .glyphicon-chevron-right {
   font-size: 45px;
   line-height: 120px;
   float: right;
