--- a/app/views/spaces/new.erb
+++ b/app/views/spaces/new.erb
@@ -22,12 +22,12 @@
 
     <section>
       <label>Start date</label>
-      <input type="text" name="start_availability" placeholder="01/06/2016">
+      <input type="date" name="start_availability" placeholder="01/06/2016">
     </section>
 
     <section>
       <label>End date</label>
-      <input type="text" name="end_availability" placeholder="31/08/2016">
+      <input type="date" name="end_availability" placeholder="31/08/2016">
     </section>
 
     <button class="btn" type="submit">Submit</button>
